Issue #2013088 by Zarabadoo: Added a margin to prevent text form being overlapped and adjusted the grid layout a bit in IE8 and under so that it is 2 columns.

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -4213,9 +4213,13 @@ body.front.logged-in .view-commons-homepage-content .article.node {
   }
 }
 
+.profile-header,
+.profile-content {
+  margin-left: 72px;
+}
+
 .profile-header {
   @include box-sizing(border-box);
-  padding-left: 72px;
 
   .user-picture {
     position: relative;
