--- a/sass/lt-ie9.scss
+++ b/sass/lt-ie9.scss
@@ -35,3 +35,9 @@ body.front.not-logged-in {
     }
   }
 }
+
+.profile-search-result {
+  width: 47%;
+  margin-right: 1%;
+  margin-left: 1%;
+}
